@@ -119,7 +119,6 @@ OPTIONS:
  -f|--fast       SHOW - use apt-cache's version, due to its speed.
  -h|--help       Print usage message.
  -n|--noauth     Allow packages from unathenticated archives.
- -p|--pause      Pause before exiting.
  -q|--quiet      Execute system commands quietly.
  -s|--simulate   Show commands to be executed but don't execute.
  -t|--teaching   Show commands to be executed and then execute them.
