@@ -132,7 +132,6 @@ Command line options:
  -b|--backup=DIR UPGRADE - Backup packages before they are upgraded.
  -h|--help       Print this documentation and exit.
  -n|--noauth     Allow packages from unathenticated archives.
- -p|--pause      Pause before exiting.
  -q|--quiet      Do not show progress of commands.
  -s|--simulate   Show commands to be executed but don't execute.
  -t|--teaching   Show commands to be executed and then execute them.
