@@ -12,8 +12,11 @@ wajig (2.3) unstable; urgency=low
     increasing minimum Python version to 3.2
   * get rid of --pager option; it's really excess, considering that user can
     simply do "wajig COMMAND | pager" by herself
+  * get rid of --pause option; it was only useful for gjig (IIRC) to avoid
+    windows from closing up automatically, in order to allow one to read
+    the output
 
- -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Tue, 03 Jan 2012 10:31:17 +0200
+ -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Tue, 03 Jan 2012 11:17:18 +0200
 
 wajig (2.2) unstable; urgency=low
 
